# manon-icore-open-sphinx-theme

./: DEVELOPING.md  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml  vite.config.js
.github/workflows/: ci.yml  publish.yml
docs/source/: changelog.md  conf.py  copyright.md  customization.md  index.md  installation.md  manon.md  requirements.txt
src/sphinx_icore_open/: __init__.py  translator.py
src/sphinx_icore_open/assets/styles/: index.scss
src/sphinx_icore_open/theme/sphinx_icore_open/: layout.html  theme.conf
src/sphinx_icore_open/theme/sphinx_icore_open/static/: theme.css
src/sphinx_icore_open/theme/sphinx_icore_open/static/css/: theme.css
static/js/: main.js
static/scss/: _manon.scss  _visually-grouped.scss  index.scss
